<resources>
    <string name="app_name">ClassTable</string>
    <string name="Teacher">Teacher</string>
    <string name="ShowWeekView">Show week chooser</string>
    <string name="finish">Exit</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="OK">OK</string>
    <string name="Notice" translatable="false">获取课表的时候可能会卡死，请耐心等待跳转</string>
    <string name="Getting">Getting Coureses</string>
    <string name="getting_done">Done</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="class1">class 1</string>
    <string name="class2">class 2</string>
    <string name="class3">class 3</string>
    <string name="class4">class 4</string>
    <string name="class5">class 5</string>
    <string name="room1">room1</string>
    <string name="room2">room2</string>
    <string name="room3">room3</string>
    <string name="room4">romm4</string>
    <string name="room5">room5</string>
    <string name="description">A Simple Class Table APP For HFUT</string>
    <string name="notice">3rd Party</string>
    <string name="icon" translatable="false">icon</string>

    <string name="ScoreFragment_string">Under Construction</string>
    <string name="score_fragment">Score</string>
    <string name="home_fragment">Class Table</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="hello_fragment">Home</string>
    <string name="Today">Today</string>
    <string name="oneWordDefault">Study is All</string>
    <string name="underConstrution">Under construction....</string>
    <string name="request_score">OK</string>
    <string name="term_chooser_title">Please choose a term</string>

</resources>
