<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/helloFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.zse233.classtable.ui.HomeFragment"
        android:label="@string/home_fragment"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_scoreFragment"
            app:destination="@id/scoreFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/scoreFragment"
        android:name="com.zse233.classtable.ui.ScoreFragment"
        android:label="@string/score_fragment"
        tools:layout="@layout/fragment_score">
        <action
            android:id="@+id/action_scoreFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/helloFragment"
        android:name="com.zse233.classtable.ui.HelloFragment"
        android:label="@string/hello_fragment"
        tools:layout="@layout/fragment_hello" >
        <action
            android:id="@+id/action_helloFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
</navigation>